notices about gradle integration